# sotto-ai

./: .gitignore  DESIGN.md  README.md  conftest.py  dev.bat  dev.ps1  index.html  package.json  pnpm-lock.yaml  status.html
.claude/: CLAUDE.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-14-wispr-clone.md  2026-07-14-filler-filter-insights-history-polish.md
docs/superpowers/specs/: 2026-05-14-wispr-clone-design.md  2026-06-05-multi-runtime-stt-design.md  2026-07-13-filler-filter-insights-history-polish-design.md
sidecar/: benchmark.py  cleanup.py  cloud.py  hardware.py  ipc.py  main.py  models.py  recorder.py  requirements.txt
sidecar/hooks/: hook-webrtcvad.py
sidecar/runtimes/: __init__.py  faster_whisper.py  nemo.py  onnx.py  onnx_asr.py  transformers.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  focus.rs  hotkeys.rs  injection.rs  license.rs  main.rs  sidecar.rs  storage.rs  tray.rs
src/components/: Home.tsx  Orb.tsx  Overlay.tsx  Pill.tsx  PipelineDebug.tsx
src/components/auth/: AuthScreen.tsx
src/components/settings/: CloudTab.tsx  GeneralTab.tsx  HistoryTab.tsx  HotkeysTab.tsx  LLMTab.tsx  LicenseTab.tsx  ModelsTab.tsx  Settings.tsx
src/components/setup/: HardwareScan.tsx  LicenseStep.tsx  ModelDownload.tsx  PermissionsStep.tsx  PlanSelection.tsx  ReadyScreen.tsx  SetupWizard.tsx  TestRecording.tsx  TranscriptionTest.tsx
src/hooks/: useSidecar.ts  useTranscription.ts
src/lib/: db.ts  downloadProgress.ts  modelStatus.ts  supabase.ts  tauri.ts
src/stores/: appStore.ts
tests/: downloadProgress.test.mjs  modelStatus.test.mjs  test_model_download_sizes.py
tests/sidecar/: conftest.py  test_benchmark_metrics.py  test_cleanup.py  test_hardware.py  test_ipc.py  test_main.py  test_onnx_asr_runtime.py  test_recorder_audio_level.py
worker/: license-worker.js  wrangler.toml
(+7 files in other folders)
