[package]
name = "sotto"
version = "0.1.0"
description = "Sotto — offline-first AI dictation"
authors = []
edition = "2021"

[package.metadata.tauri]

[[bin]]
name = "sotto"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
arboard = "3"
tokio = { version = "1", features = ["full"] }
rdev = "0.5"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.15"
windows-icons = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
